welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:7: error: ')' expected but 'if' found.
  	if (nbBiscuit==3) {
        ^Poucet:10: error: ';' expected but 'if' found.
    if (nbBiscuit()==2){
    ^